0028569: Improve the performance of 2d classifier (CSLib_Class2d)

changes: CSLib_Class2d (header and source file)